[metadata]
name = hackertoolbox
version = 0.1
description = Hacker toolbox with easy interface. Install this on a server and plan osint tasks, gather data, analyse data, search in data leaks, and more ...
author = Op1um, Kr1minal
author_email = op1um@protonmail.com
url = https://github.com/0p1um/hackertoolbox
download_url = https://github.com/0p1um/hackertoolbox
keywords = django, celery, redis, osint, data
license = GPL3
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: GPL3
	Topic :: Office/Business :: Osint
	Programming Language :: Python :: 3.7
	Framework :: Django :: 2.1

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/hackertoolboxctl
install_requires =
    httplib2
    django
    django-bootstrap4
    django-polymorphic
    google-api-python-client
    django-celery-results
    django_celery_beat
    redis
    selenium
    bs4
    dnspython
    shodan

[options.package_data]
* = 
    tasks.conf
    templates/*.html
    osint_tasks/templates/*.html
    search/templates/*.html
    static/*
    static/DataTables-1.10.18/css/*.css
    static/DataTables-1.10.18/js/*.js
    static/DataTables-1.10.18/images/*.png
    bin/sift
    bin/chromedriver
    db.sqlite3

[options.data_files]
/etc/hackertoolbox/ =
    hackertoolbox.conf
/etc/systemd/system/ = 
    systemd/hackertoolbox.service
    systemd/hackertoolbox-web-interface.service
    systemd/hackertoolbox-beatd.service
/usr/share/datasets/example-db =
    datasets/example-db/example-db
    datasets/example-db/info.json

